[package]
name = "rust-medium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tower = "0.4"
sqlx = { version = "0.6", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "json",
  "bigdecimal",
  "chrono",
] }
chrono = { version = "0.4.22", features = ["serde"] }
sqlx-core = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }